tests/spec/build/snapshots/entry_module_type_alias_value_enum_variant_method_collision.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	"reflect"
)

type K = reflect.Kind

func main() {
	fmt.Println(reflect.String)
	fmt.Println(reflect.Int)
}
