tests/spec/build/snapshots/entry_package_named_primitive_alias_const_patterns.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	"reflect"
)

type K = reflect.Kind

func nameOf(k K) string {
	switch k {
	case reflect.String:
		return "string"
	case reflect.Int:
		return "int"
	default:
		return "other"
	}
}

func main() {
	fmt.Println(nameOf(reflect.String))
}
