tests/spec/build/snapshots/entry_package_type_alias_cross_package_enum_variant.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "github.com/user/myproject/palette"

type LocalColor = palette.Color

func main() {
	_ = palette.MakeColorRGB()
	palette.MakeColorNamed("teal")
}


// === palette/mod.go ===
package palette

func MakeColorRGB() Color {
	return Color{Tag: ColorRGB}
}

func MakeColorNamed(arg0 string) Color {
	return Color{Tag: ColorNamed, Named: arg0}
}

type ColorTag uint8

const (
	ColorRGB ColorTag = iota
	ColorNamed
)

type Color struct {
	Tag   ColorTag
	Named string
}
