tests/spec/build/snapshots/enum_type_alias_with_import_alias.snap
---
source: tests/spec/build/mod.rs
---
// === lib/lib.go ===
package lib

func MakeEventClick(arg0 int) Event {
	return Event{Tag: EventClick, X: arg0}
}

type EventTag uint8

const (
	EventClick EventTag = iota
)

type Event struct {
	Tag EventTag
	X   int
}


// === main.go ===
package main

import L "github.com/user/myproject/lib"

type Alias = L.Event

func main() {
	e := L.Event{
		Tag: L.EventClick,
		X:   1,
	}
	_ = e
}
