tests/spec/build/snapshots/file_comment_bare_lines_keep_gaps.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
// Copyright 2026 Acme Corp.
//
// Provenance: generated on 2026-07-15.

package main

import "fmt"

func main() {
	fmt.Println("hi")
}
