tests/spec/build/snapshots/file_comment_edge_bare_lines_survive.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
//
// Copyright 2026 Acme Corp.
//

package main

import "fmt"

func main() {
	fmt.Println("hi")
}
