tests/spec/build/snapshots/fixed_size_array_lowers.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "fmt"

type Grid struct {
	cells [3]int
}

func first(xs [3]int) int {
	return xs[0]
}

func makeArr() [3]int {
	return [3]int{10, 20, 30}
}

func main() {
	xs := [3]int{1, 2, 3}
	g := Grid{cells: [3]int{4, 5, 6}}
	same := xs == makeArr()
	arg := len(xs)
	arg_1 := xs[0]
	fmt.Println(arg, arg_1, same, first(g.cells))
}
