tests/spec/build/snapshots/fused_match_arm_bindings_dont_leak.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "fmt"

func parse() (int, error) {
	return 1, nil
}

func main() {
	x := 100
	fmt.Println(x)
	x_1 := 200
	ret_2, err := parse()
	if err == nil {
		x := ret_2
		fmt.Println(x)
	} else {
		fmt.Println("err")
	}
	fmt.Println(x_1)
}
